--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <link rel="icon" href="%PUBLIC_URL%/logo-netflix.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="A Netflix clone React app" />
+  <meta name="description" content="A Netflix clone app" />
   <title>Netflix Clone</title>
 </head>
 
